--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,12 @@
-<%= render 'form', post: Post.new %>
+# <%= render 'form', post: Post.new %>
+
+<%= form_for ([@post, @category]) do |f| %>
+    <%= f.label "Title" %>
+    <%= f.text_field :title %>
+    <%= f.label "Content" %>
+    <%= f.text_field :content %>
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+    <%= f.fields_for :categories, post.categories.build do |category| %>
+        <%= category.text_field :name %>
+            <%end%>
+    <%= f.submit %>
